--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ $_POST["Insert Your Message"]. "From: jane@janedoe.com");
           
         </label>
        <br>
-       <form method="POST" name="testform">
+       <form class ="centre-image" method="POST" name="testform">
 
-        Enter Pig's ID:	<input type="text" name="name">
+        <center>Enter Pig's ID:</center>	<input class ="centre-image" type="text" name="name">
         
         <input class ="centre-image" type="submit" value="Send Form">
         </form>
