--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <br>
         <img id="logo" class="thick-green-border centre-image" src="assets/scrimprlogo bigcoin1.jpg" alt="3" width="auto" height="100">
 
-        <h3> Pig's Name: </h3>
+        <p> Pig's Name: </p>
 
         <br>
           
