--- a/index.html
+++ b/index.html
@@ -162,7 +162,15 @@
                         <div class="header-menu-vertical pos-relative m-t-30">
                             <h4 class="menu-title link--icon-left"><i class="far fa-align-left"></i>CATEGORIES</h4>
                             <ul class="menu-content pos-absolute">
-                                <li class="menu-item"><a href="#">Helps & Faqs</a></li>
+                                <li class="menu-item"><a href="#">Fruits and Vegetables</a></li>
+                                <li class="menu-item"><a href="#">Bakery</a></li>
+                                <li class="menu-item"><a href="#">Fridge</a></li>
+                                <li class="menu-item"><a href="#">Freezer</a></li>
+                                <li class="menu-item"><a href="#">Pantry</a></li>
+                                <li class="menu-item"><a href="#">Drinks</a></li>
+                                <li class="menu-item"><a href="#">Bathroom</a></li>
+                                <li class="menu-item"><a href="#">Laundry</a></li>
+                                <li class="menu-item"><a href="#">Pet</a></li>
                             </ul>
                         </div>
                     </div>
@@ -199,67 +207,39 @@
                     <ul>
                         <li><a href="index.html"><span>Home</span></a></li>
                         <li>
-                            <a href="#"><span>Shop</span></a>
+                            <a href="#"><span>My Lists</span></a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="#">Shop Layout</a>
+                                    <a href="#">Shopping Lists</a>
                                     <ul class="sub-menu">
-                                        <li><a href="shop-sidebar-grid-left.html">Grid Left Sidebar</a></li>
-                                        <li><a href="shop-sidebar-grid-right.html">Grid Right Sidebar</a></li>
-                                        <li><a href="shop-sidebar-full-width.html">Full Width</a></li>
-                                        <li><a href="shop-sidebar-left-list-view.html">List Left Sidebar</a></li>
-                                        <li><a href="shop-sidebar-right-list-view.html">List Right Sidebar</a></li>
+                                        <li><a href="shop-sidebar-grid-left.html">Empty</a></li>
                                     </ul>
                                 </li>
                             </ul>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="#">Shop Pages</a>
+                                    <a href="#">Title</a>
                                     <ul class="sub-menu">
-                                        <li><a href="list.html">List</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="compare.html">Compare</a></li>
-                                        <li><a href="empty-list.html">Empty List</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="my-account.html">My Account</a></li>
-                                        <li><a href="login.html">Login</a></li>
+                                        <li><a href="#">My Account</a></li>
+                                        <li><a href="#">Login</a></li>
 
                                     </ul>
                                 </li>
                             </ul>
-                            <ul class="sub-menu">
-                                <li>
-                                    <a href="#">Product Single</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="product-single-default.html">Simple</a></li>
-                                        <li><a href="product-single-affiliate.html">Affiliate</a></li>
-                                        <li><a href="product-single-group.html">Grouped</a></li>
-                                        <li><a href="product-single-variable.html">Variable</a></li>
-                                        <li><a href="product-single-tab-left.html">Left Tab</a></li>
-                                        <li><a href="product-single-tab-right.html">Right Tab</a></li>
-                                        <li><a href="product-single-slider.html">Single Slider</a></li>
-                                        <li><a href="product-single-gallery-left.html">Gallery Left</a></li>
-                                        <li><a href="product-single-gallery-right.html">Gallery Right</a></li>
-                                        <li><a href="product-single-sticky-left.html">Sticky Left</a></li>
-                                        <li><a href="product-single-sticky-right.html">Sticky Right</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
 
-                        <ul class="offcanvas__social-nav m-t-50">
-                            <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
-                                        class="fab fa-facebook-f"></i></a></li>
-                            <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
-                                        class="fab fa-twitter"></i></a></li>
-                            <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
-                                        class="fab fa-youtube"></i></a></li>
-                            <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
-                                        class="fab fa-google-plus-g"></i></a></li>
-                            <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
-                                        class="fab fa-instagram"></i></a></li>
-                        </ul>
-                </div> <!--  End Mobile-offcanvas Menu Section   -->
+                            <ul class="offcanvas__social-nav m-t-50">
+                                <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
+                                            class="fab fa-facebook-f"></i></a></li>
+                                <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
+                                            class="fab fa-twitter"></i></a></li>
+                                <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
+                                            class="fab fa-youtube"></i></a></li>
+                                <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
+                                            class="fab fa-google-plus-g"></i></a></li>
+                                <li class="offcanvas__social-list"><a href="#" class="offcanvas__social-link"><i
+                                            class="fab fa-instagram"></i></a></li>
+                            </ul>
+                </div>
 
 
     </header>
@@ -271,7 +251,7 @@
                 <div class="col-12">
                     <ul class="page-breadcrumb__menu">
                         <li class="page-breadcrumb__nav"><a href="#">Home</a></li>
-                        <li class="page-breadcrumb__nav active">Wishlist</li>
+                        <li class="page-breadcrumb__nav active">Favourites</li>
                     </ul>
                 </div>
             </div>
